force-app/main/default/objects/OrgCustomField__c/OrgCustomField__c.object-meta.xml
<CustomObject>
    <description>Custom Field information retrieved from polling for search functionality</description>
    <label>OrgCustomField</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrgCustomFields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>