force-app/main/default/objects/OrgCustomField__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Field description</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>