force-app/main/default/objects/OrgCustomField__c/fields/FieldLastModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>FieldLastModifiedBy__c</fullName>
    <complianceGroup>PII:GDPR</complianceGroup>
    <description>Org User who Modified the Field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>FieldLastModifiedBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>