force-app/main/default/objects/OrgCustomField__c/fields/FieldName__c.field-meta.xml
<CustomField>
    <fullName>FieldName__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Name of the Field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>FieldName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>