force-app/main/default/objects/OrgCustomField__c/fields/NamespacePrefix__c.field-meta.xml
<CustomField>
    <fullName>NamespacePrefix__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>If it is managed, what is the namespaceprefix</description>
    <encryptionScheme>None</encryptionScheme>
    <label>NamespacePrefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>